//
// Copyright 2021 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.functions.invocation;

option java_multiple_files = true;
option java_package = "oak.functions.invocation";

// Represents a request sent to an Oak Functions application. It wraps a byte array that the Wasm
// module can interpret as a request it can handle.
message Request {
  // The body of the request.
  bytes body = 1;
}

// Represents the response from an Oak Functions application. This is included in the body of the
// HTTP response sent to the client.
message Response {
  // Status code indicating the success or failure of the operation.
  StatusCode status = 1;
  // The body of the response generated by the Wasm module, in case of success. Or the reason of the
  // failure in case of an error. It may contain a number of trailing 0s.
  bytes body = 2;
  // The effective length of the body, excluding any trailing 0s.
  fixed64 length = 3;
}

// Status codes for the response.
enum StatusCode {
  UNSPECIFIED = 0;
  // Indicates success of the operation. Similar to HTTP 200 status code.
  SUCCESS = 1;
  // Indicates a problem with the request. Similar to HTTP 400 status code.
  BAD_REQUEST = 2;
  // Indicates violation of the response size limit specified in the security policy.
  POLICY_SIZE_VIOLATION = 3;
  // Indicates violation of the response processing-time limit specified in the security policy.
  POLICY_TIME_VIOLATION = 4;
  // Indicates other internal errors at the server. Similar to HTTP 500 status code.
  INTERNAL_SERVER_ERROR = 5;
}
